--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -155,6 +155,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\ApertureConstructionCalculationResultControl.xaml.cs">
+      <DependentUpon>ApertureConstructionCalculationResultControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\ApertureConstructionCalculationDataWindow.xaml.cs">
+      <DependentUpon>ApertureConstructionCalculationDataWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ApertureConstructionCalculationDataControl.xaml.cs">
       <DependentUpon>ApertureConstructionCalculationDataControl.xaml</DependentUpon>
     </Compile>
@@ -532,6 +538,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\ApertureConstructionCalculationResultControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ApertureConstructionCalculationDataWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\ApertureConstructionCalculationDataControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
