--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Modify\AddLabels.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\TryGetColor.cs" />
     <Compile Include="Query\CornerPoints.cs" />
     <Compile Include="Query\GroupName.cs" />
     <Compile Include="Query\SortGroup.cs" />
