--- a/Mollier/SAM.Core.Mollier.UI/SAM.Analytical.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Analytical.Mollier.UI.csproj
@@ -34,6 +34,15 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="SAM.Analytical, Version=1.0.8875.23834, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SAM.Analytical.Mollier, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SAM.Analytical.SolarCalculator, Version=1.0.8783.30823, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SAM.Analytical.Tas, Version=1.0.8854.30004, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SAM.Analytical.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\build\SAM.Analytical.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="SAM.Analytical.Windows, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="SAM.Core, Version=1.0.8236.30908, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
@@ -45,6 +54,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM_Mollier\build\SAM.Core.Mollier.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Core.Tas, Version=1.0.8860.29858, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="SAM.Core.Windows, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM_Windows\build\SAM.Core.Windows.dll</HintPath>
@@ -56,6 +66,8 @@
     <Reference Include="SAM.Geometry.Mollier">
       <HintPath>..\..\..\SAM_Mollier\build\SAM.Geometry.Mollier.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Geometry.SolarCalculator, Version=1.0.8783.30822, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SAM.Geometry.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="SAM.Math, Version=1.0.8236.30909, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM\build\SAM.Math.dll</HintPath>
@@ -64,6 +76,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM\build\SAM.Units.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Weather, Version=1.0.8875.23832, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SAM.Weather.Tas, Version=1.0.8860.29859, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="SAM.Weather.Windows, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -90,6 +105,9 @@
     <Compile Include="Classes\MollierPointEventArgs.cs" />
     <Compile Include="Classes\PointGradientVisibilitySetting.cs" />
     <Compile Include="Classes\ChartLabel.cs" />
+    <Compile Include="Classes\RotationLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Classes\UIMollierProcessPoint.cs" />
     <Compile Include="Classes\VisibilitySetting.cs" />
     <Compile Include="Classes\DisplayAnalyticalObject.cs" />
